# conduit-benchmark

./: .env.example  .gitignore  AGENTS.md  BENCHMARKING.md  BENCHMARK_RESULTS.md  BUGS.md  DESIGN_DECISIONS.md  EXPERIMENTAL_DESIGN.md  PREFLIGHT_CHECKLIST.md  README.md  RESEARCH.md  alembic.ini  conduit.yaml  gsm8k_final.json  gsm8k_fixed.json  gsm8k_latest.json  gsm8k_test.json  mmlu_test.json  pyproject.toml
DOCS/: EVALUATION_METHODOLOGY.md  EXPERIMENTAL_DESIGN.md  ORACLE_AND_PRESETS.md  README.md  REGRET_ANALYSIS.md
analysis/: benchmark_report.html  metrics.json  report.html  test_metrics.json
archive/routerbench/: routerbench_loader.py
benchmarks/: cost_comparison.py
charts/: benchmark_report.html
charts/gsm8k_10/: benchmark_report.html
charts/gsm8k_500/: benchmark_report.html
charts/mmlu_10/: benchmark_report.html
charts/mmlu_1000_db/: benchmark_report.html
charts/mmlu_50/: benchmark_report.html
charts/mmlu_500_db/: benchmark_report.html
charts/mmlu_all_algorithms_10/: benchmark_report.html
charts/mmlu_full_11algorithms/: benchmark_report.html
conduit_bench/: __init__.py  benchmark_models.py  cli.py  database.py
conduit_bench/adapters/: __init__.py  hybrid_router_adapter.py
conduit_bench/algorithms/: __init__.py  base.py  baselines.py  epsilon_greedy.py  thompson_sampling.py  ucb.py
conduit_bench/analysis/: enhanced_report.py  metrics.py  visualize.py
conduit_bench/datasets/: __init__.py  gsm8k.py  humaneval.py  mmlu.py
conduit_bench/evaluators/: __init__.py  base.py  code_execution.py  exact_match.py
conduit_bench/generators/: __init__.py  synthetic.py
conduit_bench/models/: __init__.py  registry.py
conduit_bench/runners/: __init__.py  benchmark_runner.py  model_executor.py
data/: GENERATE_SYNTHETIC_DATASET_PROMPT.md  README.md  benchmark_100.jsonl  eval_10.jsonl  eval_5.jsonl  honest_test.jsonl  test_real_repos.jsonl
datasets/: synthetic_auto.jsonl  synthetic_claude-sonnet-4-5.jsonl  synthetic_claude_opus_4_5.jsonl  synthetic_composer_1.jsonl  synthetic_composer_example.jsonl  synthetic_gpt-4o-mini.jsonl  synthetic_gpt5.jsonl  synthetic_grok-2.jsonl
docs/: BANDIT_ALGORITHMS.md  CONVERGENCE_METHODOLOGY.md  COST_MODEL.md  EMBEDDING_FEATURES.md  EVALUATION_METHODOLOGY.md  EXPERIMENTAL_DESIGN.md  GENERATE_SYNTHETIC_DATASET_PROMPT.md  ORACLE_AND_PRESETS.md  STATISTICAL_METHODS.md
examples/: basic_benchmark.py
migrations/: env.py
migrations/versions/: 36f97693de5a_add_benchmark_schema.py
results/: benchmark.json  cost_check_10obs.json  cost_verification_20obs.json  gsm8k_10.json  gsm8k_500_validation.json  mmlu_10.json  pricing_validation.json  pricing_validation_v2.json  pricing_validation_v3.json  pricing_validation_v4.json  small_benchmark_22obs_11algos.json  small_benchmark_22obs_11algos_v2.json  small_benchmark_22obs_11algos_v3.json
scripts/: check_db_results.py  check_failure_details.py  check_latest_benchmark.py  export_from_db.py  generate_synthetic_datasets.py  investigate_failures.py  quality_comparison.py  query_database.py  split_mmlu_train_val.py
tests/: test_benchmark_runner.py  test_cli_integration.py  test_exact_match_evaluator.py  test_gsm8k_loader.py  test_metrics.py  test_model_executor.py  test_synthetic_generator.py  test_visualize.py
workloads/: sample.json
