[tool.poetry]
name = "conduit-bench"
version = "0.1.0"
description = "Benchmarking and continuous improvement system for Conduit LLM routing"
authors = ["Evan Volgas"]
license = "MIT"
readme = "README.md"
packages = [{include = "conduit_bench"}]

[tool.poetry.dependencies]
python = "^3.10"
# Conduit dependencies (install from local or git)
conduit = {path = "../conduit", develop = true}
pydantic = "^2.12"
pydantic-ai = "^1.20"
# Loom for evaluation pipelines
# loom = {path = "../loom", develop = true}
# Arbiter for quality evaluation
arbiter = {git = "https://github.com/evanvolgas/arbiter.git", branch = "main"}
# Data processing
pandas = "^2.2"
polars = "^0.19"
# LLM providers
openai = "^1.12"
anthropic = "^0.34"
google-generativeai = "^0.8"
# Database
asyncpg = "^0.29"
sqlalchemy = "^2.0"
alembic = "^1.13"
# Caching
redis = "^5.0"
# CLI and utilities
click = "^8.1"
rich = "^14.0"
tqdm = "^4.66"
python-dotenv = "^1.0"
# Analysis and visualization
matplotlib = "^3.9"
seaborn = "^0.13"
plotly = "^5.24"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
black = "^25.0"
ruff = "^0.14"
mypy = "^1.18"
ipython = "^9.0"
jupyter = "^1.1"

[tool.poetry.scripts]
conduit-bench = "conduit_bench.cli:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--strict-markers --cov=conduit_bench --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
