[project]
name = "conduit-bench"
version = "0.1.0"
description = "Benchmarking and continuous improvement system for the Conduit Router"
authors = [{name = "Evan Volgas"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    # Conduit dependencies (install from local or git)
    "conduit-router",
    "pydantic>=2.12",
    "pydantic-ai>=1.20",
    # Arbiter for quality evaluation
    "arbiter-ai>=0.1.0",
    # Dataset loading from HuggingFace
    "datasets>=3.0",
    # Data processing
    "pandas>=2.2",
    "polars>=0.19",
    # LLM providers
    "openai>=2.0",
    "anthropic>=0.70",
    "google-generativeai>=0.8",
    # Database
    "asyncpg>=0.31",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # Caching
    "redis>=5.0",
    # CLI and utilities
    "click>=8.1",
    "rich>=14.0",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    # Analysis and visualization
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.24",
    "litellm>=1.80.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "black>=25.0",
    "ruff>=0.14",
    "mypy>=1.18",
    "ipython>=9.0",
    "jupyter>=1.1",
]

[project.scripts]
conduit-bench = "conduit_bench.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "black>=25.0",
    "ruff>=0.14",
    "mypy>=1.18",
    "ipython>=9.0",
    "jupyter>=1.1",
]

[tool.uv.sources]
conduit-router = { path = "../conduit", editable = true }
# Note: arbiter-ai is used for LLM-as-judge evaluation, not cost calculation
# Cost calculation now uses conduit.core.pricing (LiteLLM-based)

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--strict-markers --cov=conduit_bench --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
